# PSoC42xxRust

./: .gitignore  AGENTS.md  GEMINI.md  README.md
Doc/: motion-control-review-2026-04-23.md
PSoC42rs.cydsn/: CMakeLists.txt  Cargo.toml  PSoC42rs-000.cywrk  PSoC42rs-000.cywrk.jzapn  PSoC42rs.code-workspace  PSoC42rs.cycdx  PSoC42rs.cydwr  PSoC42rs.cyfit  PSoC42rs.cyprj  PSoC42rs.cyprj.jzapn  PSoC42rs.rpt  PSoC42rs.svd  PSoC42rs_timing.html  Readme.md  bindgen_wrappers.c  bindgen_wrappers.h  cmakebuild.bat  main.c  rustbuild.bat  serial_log.txt  toolchain-arm-none-eabi.cmake
PSoC42rs.cydsn/.cargo/: config.toml
PSoC42rs.cydsn/Design/: Design.tsnb  Psoc4rs.tsnb  Stepper.py  Untitled.ipynb
PSoC42rs.cydsn/Design/.ipynb_checkpoints/: Psoc4rs-checkpoint.tsnb
PSoC42rs.cydsn/Design/Psoc4rs.tsnb.runs/: Run_1_2be394db.run
PSoC42rs.cydsn/Ref/: CMakeLists - Copy.txt  CMakeLists copy.txt  CMakeLists gemcopy 2.txt
PSoC42rs.cydsn/TopDesign/: TopDesign.cysch
PSoC42rs.cydsn/rs_testing/: Cargo.toml  serial_log.txt
PSoC42rs.cydsn/rs_testing/src/: Cargo.toml  Config.rs  README.md  egui_testing.rs  encoder_tests.rs  main.rs  serial_plotter.rs  serial_testing.rs  test_tools.rs
PSoC42rs.cydsn/rust_core/: Cargo.toml
PSoC42rs.cydsn/rust_core/src/: adrc.rs  encoder_core I32F32.rs  encoder_core.rs  lib.rs  serial_core copy.rs  serial_core.rs  utils_core.rs
PSoC42rs.cydsn/rust_project/: Cargo.toml  build.rs  cbindgen.toml  rust_api.h
PSoC42rs.cydsn/rust_project/.cargo/: config.toml
PSoC42rs.cydsn/rust_project/src/: Config.rs  bindings.rs  encoder.rs  ffi.rs  host_stubs.rs  lib.rs  libembassy.rs  motor.rs  serial copy 2.rs  serial copy.rs  serial.rs  sys.rs  ui.rs  utils.rs
PSoC42rs.cydsn/test_ui/src/: main.rs
PSoCRust/: PSoCRust.cywrk  PSoCRust.cywrk.jzapn
hal/: bindgen_wrappers.c  bindgen_wrappers.h
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/rust_firmware/: Cargo.toml  build.rs
rust/rust_firmware/src/: bindings.rs  encoder.rs  ffi.rs  host_stubs.rs  lib.rs  motor.rs  serial.rs  sys.rs  ui.rs
rust/test_ui/: Cargo.toml
scripts/: build_rust.sh
