[package]
name = "rs_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
# Ensure the key name (left side) matches what you want to call in your code

fixed = { version = "1.29" }
bitfield-struct = "0.11"
local_static = "0.1.1"
static_cell = "2.1.1"
cty = "0.2"
eframe = "0.28" # The framework to run the window
egui_plot = "0.28" # The plotting library
heapless = "0.9.1"
gnuplot = "0.0.46"
rand = "0.9.2"
rust_core = { workspace = true }


tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
chrono = "0.4"
anyhow = "1"