[package]
name = "rust_firmware"
version = "1.0.0"
authors = ["juanesPaz"]
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
cty = "0.2"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
local_static = "0.1.1"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
static_cell = "2.1.1"
heapless = "0.9.1"
bitfield-struct = "0.11"
fixed = { version = "1.29", default-features = false }
rs-core = { workspace = true, features = ["embedded"] }

[build-dependencies]
bindgen = "0.72.1"
